--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,15 +15,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: SamuelScript/FirstArcade
-          token: ${{secrets.GITHUB_TOKEN}}
+          token: ${{secrets.PUBLIC_REPO_TOKEN}}
 
-      # Runs a single command using the runners shell
       - name: Add public repository
         run: |
           git remote add public https://github.com/devNaosteveaqui/FirstArcade-
           git fetch public
 
-      # Runs a set of commands using the runners shell
       - name: Push to public
         run: |
           git push public main
